[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://interface/theme/fonts/source_code_pro_26.tres" type="DynamicFont" id=2]

[node name="SettingsMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Settings Menu"
align = 1
valign = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 465.0
margin_top = 362.0
margin_right = 815.0
margin_bottom = 720.0
size_flags_horizontal = 6
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Fullscreen" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 40.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen: False"

[node name="SoundMute" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Sound Mute: False"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/SoundMute" to="." method="_on_SoundMute_pressed"]
